Store style info